<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/salary_breakdown"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_twotone_add_circle_24" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/net_salary"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/net_salary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ghs_0_00"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#30000000" />

        <!--        Gross-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gross_salary"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/gross_salary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ghs_0_00"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#30000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_salary"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/basic_salary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ghs_0_00"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#30000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employer_pension"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/employer_pension_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ghs_0_00"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#30000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee_pension"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/employee_pension_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ghs_0_00"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#30000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_pension_amount"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/total_pension_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ghs_0_00"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#30000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paye"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/paye_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ghs_0_00"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#30000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_allowance"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/total_allowance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ghs_0_00"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#30000000" />
    </LinearLayout>
</RelativeLayout>