...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/notice_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_info"
        android:drawablePadding="20dp"
        android:lineSpacingExtra="5dp"
        android:layout_marginHorizontal="16dp"
        android:padding="16dp"
        android:text="@string/input_notice_text"
        android:textColor="#667085"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_icon_info"
        android:layout_marginTop="16dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/included"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/notice_text"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
...
                    android:text="@string/ghs"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/net_value_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:hint="0.00"
                    android:inputType="phone"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:padding="16dp" />

            </LinearLayout>
...
                    android:text="@string/ghs"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/lunch_allow_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:hint="0.00"
                    android:inputType="phone"
                    android:maxLength="8"
...
                    android:text="@string/ghs"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/transportation_allow_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:hint="0.00"
                    android:inputType="phone"
                    android:maxLength="8"
...
                    android:text="@string/ghs"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/housing_allow_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:hint="0.00"
                    android:inputType="phone"
                    android:maxLength="8"
...
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/proceedBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/calculate"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp" />
</RelativeLayout>
