<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_corners_primary">

    <LinearLayout
        android:id="@+id/proceedBtn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:translationZ="15dp"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/calculate"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>