<resources>
    <string name="app_name">Gross Salary Calculator</string>
    <string name="net_salary">Net salary</string>
    <string name="ghs">GHS</string>
    <string name="lunch_allowance">Lunch Allowance (/month)</string>
    <string name="transportation_allowance">Transportation Allowance (/month)</string>
    <string name="housing_allowance_month">Housing Allowance (/month)</string>
    <string name="calculate">Calculate</string>
    <string name="invalid_input">Invalid input</string>
    <string name="ghs_0_00">"GHS 0.00"</string>
    <string name="salary_breakdown">Salary Breakdown</string>
    <string name="gross_salary">Gross Salary</string>
    <string name="basic_salary">Basic Salary</string>
    <string name="employer_pension">Employer Pension</string>
    <string name="employee_pension">Employee Pension</string>
    <string name="paye">PAYE</string>
    <string name="total_allowance">Total Allowance</string>

    <string name="currency_format">GHS %1$,.2f</string>
    <string name="total_pension_amount">Total Pension Amount</string>
    <string name="input_notice_text">Provide values for the fields below and tap \'Calculate\' to see potential salary breakdown</string>
</resources>